# python-prophet

./: .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: condition_accessor_tests.py  example.py  forecast_accessor_tests.py  forecast_tests.py  pandas_quick_start.py  prophet_quick_start.py
scripts/data/input/: prices.csv
scripts/data/output/: 1_yearly_auto.csv  2_yearly_auto_weekly_auto.csv  3_yearly_auto_weekly_auto_daily_auto.csv  5_full_conditional_seasonalities_at_once.csv  6_add_shocks.csv  7_regressors.csv  8_country_holidays.csv  9_match_timezone.csv
scripts/setup/: __init__.py  logging.toml  settings.toml
src/forecast/: __init__.py  accessors.py  classes.py  constants.py  decorators.py  exceptions.py  helpers.py  my_module.py
